--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "node server.js",
-        "build": "ng build",
+        "build": "ng build --base-href https://github.com/andywhite97/restaurant/",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
     },
